charts/helm/whoami/deploy/whoami.ingress.yaml
# https://medium.com/@awkwardferny/getting-started-with-kubernetes-ingress-nginx-on-minikube-d75e58f52b6c

# USAGE: kubectl apply -f echoserver.svc.yaml
# wait a min for the service to be created
# kubectl get svc

# wait a min for the ingress resource to be created
# $ kubectl get ing
# NAME           HOSTS     ADDRESS     PORTS
# zeke-ingress   *         10.0.2.15   80

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zeke-ingress
  annotations:
    # Note the nginx.ingress.kubernetes.io/ssl-redirect annotation. It is used since we are not specifying a host. When no host is specified, then the default-server is hit, which is configured with a self-signed certificate, and redirects http to https. This issue explains more.
    # https://github.com/kubernetes/ingress-nginx/issues/1567
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
  - http:
      paths:
      - path: /zeke
        backend:
          serviceName: zeke-svc
          servicePort: 80
